mdapioutput/objects/PromoCalendarSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>DisplayObjectLookup__c</fullName>
        <label>Display Object Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterParameters__c</fullName>
        <label>Filter Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCreateAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Create Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleteAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Delete Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDividedByZones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divide Into Zones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDrop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drag And Drop Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLVZoneField__c</fullName>
        <label>Promo PLV Zone Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObjectName__c</fullName>
        <label>Parent Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroupingField__c</fullName>
        <label>Promo Product Grouping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductObjectAPIName__c</fullName>
        <label>Product Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPromoLookup__c</fullName>
        <label>Promo Product Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoCalendarHeaderId__c</fullName>
        <label>Promo Calendar Header</label>
        <referenceTo>PromoCalendarHeader__mdt</referenceTo>
        <relationshipName>PromoCalendarSettings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PromoEndDateField__c</fullName>
        <label>Promo End Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoGroupingField__c</fullName>
        <label>Promo Product Grouping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoJunctionObject__c</fullName>
        <label>Promo Junction Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoJunctionReference__c</fullName>
        <description>Field on (Promo Junction Object API Name) object to match Account from visit object (set in Header Settings)</description>
        <inlineHelpText>Field on (Promo Junction Object API Name) object to match Account from visit object (set in Header Settings)</inlineHelpText>
        <label>Promo Junction Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoObjectName__c</fullName>
        <label>Promo Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoProductLookup__c</fullName>
        <label>Promo Product Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoProductObject__c</fullName>
        <label>Promo Product API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoStartDateField__c</fullName>
        <label>Promo Start Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionLookupName__c</fullName>
        <label>Promotion Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordCondition__c</fullName>
        <label>Record Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promo Calendar Settings</label>
    <pluralLabel>Promo Calendar Settings</pluralLabel>
</CustomObject>